day3-exercitii suplimentare

--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -10,7 +10,7 @@
     <div ng-include="'views/menu.html'"></div>
 
     <!--TODO #5 add ng-view directive-->
-    <!--<div class="container" ng-view></div>-->
+    <div class="container" ng-view></div>
 
 </div>
 <!--<h1>HR Application</h1>-->
@@ -20,21 +20,19 @@
 <script type="text/javascript" src="scripts/app.js"></script>
 <script type="text/javascript" src="scripts/controllers/MenuController.js"></script>
 <script type="text/javascript" src="scripts/controllers/MainController.js"></script>
+<script type="text/javascript" src="scripts/controllers/UserAddController.js"></script>
 <script type="text/javascript" src="scripts/controllers/demo/RequestController.js"></script>
 <script type="text/javascript" src="scripts/services/MenuServices.js"></script>
 <script type="text/javascript" src="scripts/services/CommonResourcesFactory.js"></script>
+<script type="text/javascript" src="scripts/services/demo/MathService.js"></script>
 <script type="text/javascript" src="scripts/controllers/EmployeeListController.js"></script>
 <script type="text/javascript" src="scripts/controllers/EmployeeViewController.js"></script>
+<script type="text/javascript" src="scripts/controllers/demo/MathController.js"></script>
+
 
 <!--TODO #1 include angular-route.js-->
-
+<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 
 <!--TODO add other necessary js files-->
-
-
-
-
-
-
 </body>
 </html>
